--- a/views/create-event.ejs
+++ b/views/create-event.ejs
@@ -1,5 +1,5 @@
 <%- include('partials/header.ejs') %>
-    <!-- Form for donation creation -->
+<!-- Form for donation creation -->
 <%if(user){%>
 <!-- Request -->
 <div id="request" class="form-1">
@@ -8,24 +8,15 @@
         <div class="row">
             <div class="col-lg-6">
                 <div class="text-container">
-                    <h2>Fill The Following Form To Request A Meeting</h2>
-                    <p>Evolo is one of the easiest and feature packed marketing automation apps in the market. Discover what it can do for your business organization right away.</p>
+                    <h2>Create a new event and Invite people to help you!</h2>
                     <ul class="list-unstyled li-space-lg">
                         <li class="media">
                             <i class="fas fa-check"></i>
-                            <div class="media-body"><strong class="blue">Automate your marketing</strong> activities and get results today</div>
+                            <div class="media-body">Easily Find Voluteers for your work!</div>
                         </li>
                         <li class="media">
                             <i class="fas fa-check"></i>
-                            <div class="media-body"><strong class="blue">Interact with all your</strong> targeted customers at a personal level</div>
-                        </li>
-                        <li class="media">
-                            <i class="fas fa-check"></i>
-                            <div class="media-body"><strong class="blue">Convince them to buy</strong> your company's awesome products</div>
-                        </li>
-                        <li class="media">
-                            <i class="fas fa-check"></i>
-                            <div class="media-body"><strong class="blue">Save precious time</strong> and invest it where you need it the most</div>
+                            <div class="media-body">Its all free, Hence the community</div>
                         </li>
                     </ul>
                 </div> <!-- end of text-container -->
@@ -34,37 +25,21 @@
                 <!-- Request Form -->
                 <div class="form-container">
                     <form method="post" action="/create/new-event">
-                                                <div class="form-group">
-                            <input type="text" class="form-control-input" name="title"
-                                placeholder="Title" />
-                          
-                            <div class="help-block with-errors"></div>
-                        </div>
-                     <!--   <div class="form-group">
-                            <input type="email" name="email" id="email" class="form-control-input" required />
-                            <label class="label-control" for="email">Email</label>
-                            <div class="help-block with-errors"></div>
-                        </div>  -->
                         <div class="form-group">
-                            <textarea class="form-control-input" name="message" placeholder="Body"
-                                rows="14" required></textarea>
-                           
+                            <input type="text" class="form-control-input" name="title" placeholder="Title" />
+
                             <div class="help-block with-errors"></div>
                         </div>
-                    <!--    <div class="form-group">
-                           <select class="form-control-select" id="rselect" required>
-                                <option class="select-option" value="" disabled selected>Interested in...</option>
-                                <option class="select-option" value="Personal Loan">Starter</option>
-                                <option class="select-option" value="Car Loan">Medium</option>
-                                <option class="select-option" value="House Loan">Complete</option>
-                            </select> 
-                            <input type="file" id="fileField" name="myfile" class="form-control-input"
-            accept=".jpg, .png, .jpeg, .gif" required /> -->
-          <!--  <label class="label-control">Upload Image</label>
+                        <div class="form-group">
+                            <textarea class="form-control-input" name="message" placeholder="Body" rows="10"
+                                required></textarea>
+
                             <div class="help-block with-errors"></div>
-                        </div>   -->
+                        </div>
                         <div class="form-group checkbox">
-                            <input type="checkbox" id="rterms" value="Agreed-to-Terms" name="rterms" required>I agree with Evolo's stated <a href="privacy-policy.html">Privacy Policy</a> and <a href="terms-conditions.html">Terms & Conditions</a>
+                            <input type="checkbox" id="rterms" value="Agreed-to-Terms" name="rterms" required>I agree
+                            with Evolo's stated <a href="privacy-policy.html">Privacy Policy</a> and <a
+                                href="terms-conditions.html">Terms & Conditions</a>
                             <div class="help-block with-errors"></div>
                         </div>
                         <div class="form-group">
@@ -74,11 +49,11 @@
                             <div id="rmsgSubmit" class="h3 text-center hidden"></div>
                         </div>
                     </form>
-</div> <!-- end of form-container -->
-<!-- end of request form -->
-</div> <!-- end of col -->
-</div> <!-- end of row -->
-</div> <!-- end of container -->
+                </div> <!-- end of form-container -->
+                <!-- end of request form -->
+            </div> <!-- end of col -->
+        </div> <!-- end of row -->
+    </div> <!-- end of container -->
 </div> <!-- end of form-1 -->
 <!-- end of request -->
 <%}else{%>
