--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -50,47 +50,36 @@
         </button>
         <!-- end of mobile menu toggle button -->
 
-      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-          <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                  <a class="nav-link page-scroll" href="/">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link page-scroll" href="/show/events/1">Events</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link page-scroll" href="/show/donations">Donations</a>
-              </li>
-            <!--  <li class="nav-item">
-                  <a class="nav-link page-scroll" href="#request">Request</a>
-              </li>  -->
+        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link page-scroll" href="/">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link page-scroll" href="/show/events/1">Events</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link page-scroll" href="/show/donations">Donations</a>
+                </li>
 
-              <!-- Dropdown Menu -->          
-             <!-- <li class="nav-item dropdown">
-                  <a class="nav-link page-scroll" href="/about">About</a>
-                  <a class="nav-link dropdown-toggle page-scroll" href="#about" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">About</a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="terms-conditions.html"><span class="item-text">Terms Conditions</span></a>
-                      <div class="dropdown-items-divide-hr"></div>
-                      <a class="dropdown-item" href="privacy-policy.html"><span class="item-text">Privacy Policy</span></a>
-                  </div>
-              </li> -->
-              <!-- end of dropdown menu --> 
-
-              <li class="nav-item">
-                  <a class="nav-link page-scroll" href="/contact">Contact</a>
-              </li>
-                  <% if (user) {%>
-                      <% var name = user.username %> 
-                      <% var use = name.split(' ')%> 
-                      <li class="nav-item dropdown">
-                          <a class="nav-link dropdown-toggle page-scroll" href="#about" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false" style="color: #00bfd8;"><%= use[0]%></a>
-                          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              <a class="dropdown-item" href="/create/new-event"><span class="item-text">+ Create</span></a>
-                              <div class="dropdown-items-divide-hr"></div>
-                              <a class="dropdown-item" href="/auth/logout"><span class="item-text">Logout</span></a>
-                          </div>
-                      </li>
+                <li class="nav-item">
+                    <a class="nav-link page-scroll" href="/contact">Contact</a>
+                </li>
+                <% if (user) {%>
+                <% var name = user.username %>
+                <% var use = name.split(' ')%>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle page-scroll" href="#about" id="navbarDropdown" role="button"
+                        aria-haspopup="true" aria-expanded="false" style="color: #00bfd8;"><%= use[0]%></a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="/create/new-event"><span class="item-text">Create
+                                Event</span></a>
+                        <a class="dropdown-item" href="/create/new-donation"><span class="item-text">Post
+                                Donation</span></a>
+                        <div class="dropdown-items-divide-hr"></div>
+                        <a class="dropdown-item" href="/auth/logout"><span class="item-text">Logout</span></a>
+                    </div>
+                </li>
 
                 <% }else{%>
                 <li class="nav-item">
