--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,8 +30,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2>Business Growth Services</h2>
-                    <p class="p-heading p-large">We serve small and medium sized companies in all tech related industries with high quality growth services which are presented below</p>
+                    
+                    <!-- <p class="p-heading p-large">We serve small and medium sized companies in all tech related industries with high quality growth services which are presented below</p> -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
             <div class="row">
@@ -41,28 +41,28 @@
                     <div class="card">
                         <img class="card-image" src="/public/imgs/services-icon-1.svg" alt="alternative">
                         <div class="card-body">
-                            <h4 class="card-title">Market Analysis</h4>
-                            <p>Our team of enthusiastic marketers will analyse and evaluate how your company stacks against the closest competitors</p>
+                            <h4 class="card-title">Events</h4>
+                            <p>You can lookup to what events are there so that you can contribute for a cause.</p>
                         </div>
                     </div>
                     <!-- end of card -->
 
                     <!-- Card -->
-                    <div class="card">
+                    <!-- <div class="card">
                         <img class="card-image" src="/public/imgs/services-icon-2.svg" alt="alternative">
                         <div class="card-body">
-                            <h4 class="card-title">Opportunity Scan</h4>
+                            <h4 class="card-title">Donations</h4>
                             <p>Once the market analysis process is completed our staff will search for opportunities that are in reach</p>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- end of card -->
 
                     <!-- Card -->
                     <div class="card">
                         <img class="card-image" src="/public/imgs/services-icon-3.svg" alt="alternative">
                         <div class="card-body">
-                            <h4 class="card-title">Action Plan</h4>
-                            <p>With all the information in place you will be presented with an action plan that your company needs to follow</p>
+                            <h4 class="card-title">Donations</h4>
+                            <p>This platform allows you to Donate on On-going events.</p>
                         </div>
                     </div>
                     <!-- end of card -->
@@ -80,9 +80,9 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="text-container">
-                        <h2>Design And Plan Your Business Growth Steps</h2>
-                        <p>Use our staff and our expertise to design and plan your business growth strategy. Evolo team is eager to advise you on the best opportunities that you should look into</p>
-                        <a class="btn-solid-reg popup-with-move-anim" href="#details-lightbox-1">LIGHTBOX</a>
+                        <h2>Allow users to easily contribute to the research</h2>
+                        <!-- <p>Use our staff and our expertise to design and plan your business growth strategy. Evolo team is eager to advise you on the best opportunities that you should look into</p> -->
+                        <!-- <a class="btn-solid-reg popup-with-move-anim" href="#details-lightbox-1">LIGHTBOX</a> -->
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-6">
@@ -107,8 +107,8 @@
                 </div> <!-- end of col -->
                 <div class="col-lg-6">
                     <div class="text-container">
-                        <h2>Search For Optimization Wherever Is Possible</h2>
-                        <ul class="list-unstyled li-space-lg">
+                        <h2>Minimize the gap between researchers/institutions and potential contributors</h2>
+                        <!-- <ul class="list-unstyled li-space-lg">
                             <li class="media">
                                 <i class="fas fa-check"></i>
                                 <div class="media-body">Basically we'll teach you step by step what you need to do</div>
@@ -121,8 +121,8 @@
                                 <i class="fas fa-check"></i>
                                 <div class="media-body">Everyone will be pleased from stakeholders to employees</div>
                             </li>
-                        </ul>
-                        <a class="btn-solid-reg popup-with-move-anim" href="#details-lightbox-2">LIGHTBOX</a>
+                        </ul> -->
+                        <!-- <a class="btn-solid-reg popup-with-move-anim" href="#details-lightbox-2">LIGHTBOX</a> -->
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -175,16 +175,16 @@
     <!-- end of details lightbox 1 -->
 
     <!-- Details Lightbox 2 -->
-	<div id="details-lightbox-2" class="lightbox-basic zoom-anim-dialog mfp-hide">
+	<!-- <div id="details-lightbox-2" class="lightbox-basic zoom-anim-dialog mfp-hide">
         <div class="container">
             <div class="row">
                 <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
                 <div class="col-lg-8">
                     <div class="image-container">
-                        <img class="img-fluid" src="/public/imgs/details-lightbox-2.svg" alt="alternative">
+                        <img class="img-fluid" src="/public/imgs/details-lightbox-2.svg" alt="alternative"> -->
                     </div> <!-- end of image-container -->
                 </div> <!-- end of col -->
-                <div class="col-lg-4">
+                <!-- <div class="col-lg-4">
                     <h3>Search To Optimize</h3>
                     <hr>
                     <h5>Core feature</h5>
@@ -197,8 +197,8 @@
                         <li class="media">
                             <i class="fas fa-check"></i><div class="media-body">Easy database browsing</div>
                         </li>
-                        <li class="media">
-                            <i class="fas fa-check"></i><div class="media-body">User administration</div>
+                        <li class="media"> -->
+                            <!-- <i class="fas fa-check"></i><div class="media-body">User administration</div>
                         </li>
                         <li class="media">
                             <i class="fas fa-check"></i><div class="media-body">Automate user signup</div>
@@ -209,9 +209,9 @@
                         <li class="media">
                             <i class="fas fa-check"></i><div class="media-body">Fast email checking</div>
                         </li>
-                    </ul>
-                    <a class="btn-solid-reg mfp-close page-scroll" href="#request">REQUEST</a> <a class="btn-outline-reg mfp-close as-button" href="#screenshots">BACK</a>
-                </div> <!-- end of col -->
+                    </ul> -->
+                    <!-- <a class="btn-solid-reg mfp-close page-scroll" href="#request">REQUEST</a> <a class="btn-outline-reg mfp-close as-button" href="#screenshots">BACK</a>
+                </div> end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
     </div> <!-- end of lightbox-basic -->
@@ -223,63 +223,62 @@
 
 
     <!-- Testimonials -->
-    <div class="slider-2">
+    <!-- <div class="slider-2">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
                     <div class="image-container">
-                        <img class="img-fluid" src="/public/imgs/testimonials-2-men-talking.svg" alt="alternative">
-                    </div> <!-- end of image-container -->
-                </div> <!-- end of col -->
+                        <img class="img-fluid" src="/public/imgs/testimonials-2-men-talking.svg" alt="alternative"> -->
+                    <!-- </div> 
+                </div> 
                 <div class="col-lg-6">
-                    <h2>Testimonials</h2>
+                    <h2>Testimonials</h2> -->
 
                     <!-- Card Slider -->
-                    <div class="slider-container">
+                    <!-- <div class="slider-container">
                         <div class="swiper-container card-slider">
                             <div class="swiper-wrapper">
-                                
+                                 -->
                                 <!-- Slide -->
-                                <div class="swiper-slide">
+                                <!-- <div class="swiper-slide">
                                     <div class="card">
                                         <img class="card-image" src="/public/imgs/testimonial-1.svg" alt="alternative">
                                         <div class="card-body">
                                             <p class="testimonial-text">I just finished my trial period and was so amazed with the support and results that I purchased Evolo right away at the special price.</p>
                                             <p class="testimonial-author">Jude Thorn - Designer</p>
                                         </div>
-                                    </div>
-                                </div> <!-- end of swiper-slide -->
+                                    </div> -->
+                                <!-- </div>  -->
                                 <!-- end of slide -->
         
                                 <!-- Slide -->
-                                <div class="swiper-slide">
+                                <!-- <div class="swiper-slide">
                                     <div class="card">
                                         <img class="card-image" src="/public/imgs/testimonial-2.svg" alt="alternative">
                                         <div class="card-body">
                                             <p class="testimonial-text">Evolo has always helped or startup to position itself in the highly competitive market of mobile applications. You will not regret using it!</p>
                                             <p class="testimonial-author">Marsha Singer - Developer</p>
                                         </div>
-                                    </div>        
-                                </div> <!-- end of swiper-slide -->
+                                    </div>         -->
+                                <!-- </div> end of swiper-slide -->
                                 <!-- end of slide -->
         
                                 <!-- Slide -->
-                                <div class="swiper-slide">
+                                <!-- <div class="swiper-slide">
                                     <div class="card">
                                         <img class="card-image" src="/public/imgs/testimonial-3.svg" alt="alternative">
                                         <div class="card-body">
                                             <p class="testimonial-text">Love their services and was so amazed with the support and results that I purchased Evolo for two years in a row. They are awesome.</p>
                                             <p class="testimonial-author">Roy Smith - Marketer</p>
                                         </div>
-                                    </div>        
-                                </div> <!-- end of swiper-slide -->
+                                    </div>         -->
+                                <!-- </div> -->
                                 <!-- end of slide -->
                                
-                            </div> <!-- end of swiper-wrapper -->
-        
+                            <!-- </div>  -->
                             <!-- Add Arrows -->
-                            <div class="swiper-button-next"></div>
-                            <div class="swiper-button-prev"></div>
+                            <!-- <div class="swiper-button-next"></div> -->
+                            <!-- <div class="swiper-button-prev"></div> -->
                             <!-- end of add arrows -->
         
                         </div> <!-- end of swiper-container -->
@@ -299,7 +298,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h2>About The Team</h2>
-                    <p class="p-heading p-large">Meat our team of specialized marketers and business developers which will help you research new products and launch them in new emerging markets</p>
+                    <p class="p-heading p-large">Meet our team of developers which will help you research new products and launch them in new emerging markets</p>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
             <div class="row">
@@ -310,8 +309,8 @@
                         <div class="image-wrapper">
                             <img class="img-fluid" src="/public/imgs/team-member-1.svg" alt="alternative">
                         </div> <!-- end of image-wrapper -->
-                        <p class="p-large"><strong>Lacy Whitelong</strong></p>
-                        <p class="job-title">Business Developer</p>
+                        <p class="p-large"><strong>Ritika Jaiswal</strong></p>
+                        <p class="job-title">Developer</p>
                         <span class="social-icons">
                             <span class="fa-stack">
                                 <a href="#your-link">
@@ -334,8 +333,8 @@
                         <div class="image-wrapper">
                             <img class="img-fluid" src="/public/imgs/team-member-2.svg" alt="alternative">
                         </div> <!-- end of image wrapper -->
-                        <p class="p-large"><strong>Chris Brown</strong></p>
-                        <p class="job-title">Online Marketer</p>
+                        <p class="p-large"><strong>Rahil Rehan</strong></p>
+                        <p class="job-title">Developer</p>
                         <span class="social-icons">
                             <span class="fa-stack">
                                 <a href="#your-link">
@@ -356,10 +355,10 @@
                     <!-- Team Member -->
                     <div class="team-member">
                         <div class="image-wrapper">
-                            <img class="img-fluid" src="/public/imgs/team-member-3.svg" alt="alternative">
+                            <img class="img-fluid" src="/public/imgs/team-member-2.svg" alt="alternative">
                         </div> <!-- end of image wrapper -->
-                        <p class="p-large"><strong>Sheila Zimerman</strong></p>
-                        <p class="job-title">Software Engineer</p>
+                        <p class="p-large"><strong>Samarth Asthana</strong></p>
+                        <p class="job-title">Developer</p>
                         <span class="social-icons">
                             <span class="fa-stack">
                                 <a href="#your-link">
@@ -375,15 +374,13 @@
                             </span>
                         </span> <!-- end of social-icons -->
                     </div> <!-- end of team-member -->
-                    <!-- end of team member -->
 
-                    <!-- Team Member -->
-                    <div class="team-member">
+                         <div class="team-member">
                         <div class="image-wrapper">
-                            <img class="img-fluid" src="/public/imgs/team-member-4.svg" alt="alternative">
+                            <img class="img-fluid" src="/public/imgs/team-member-2.svg" alt="alternative">
                         </div> <!-- end of image wrapper -->
-                        <p class="p-large"><strong>Mary Villalonga</strong></p>
-                        <p class="job-title">Product Manager</p>
+                        <p class="p-large"><strong>Manuel Stefan</strong></p>
+                        <p class="job-title">Developer</p>
                         <span class="social-icons">
                             <span class="fa-stack">
                                 <a href="#your-link">
@@ -399,7 +396,29 @@
                             </span>
                         </span> <!-- end of social-icons -->
                     </div> <!-- end of team-member -->
-                    <!-- end of team member -->
+                    
+                         <div class="team-member">
+                        <div class="image-wrapper">
+                            <img class="img-fluid" src="/public/imgs/team-member-2.svg" alt="alternative">
+                        </div> <!-- end of image wrapper -->
+                        <p class="p-large"><strong>Michael</strong></p>
+                        <p class="job-title">Developer</p>
+                        <span class="social-icons">
+                            <span class="fa-stack">
+                                <a href="#your-link">
+                                    <i class="fas fa-circle fa-stack-2x facebook"></i>
+                                    <i class="fab fa-facebook-f fa-stack-1x"></i>
+                                </a>
+                            </span>
+                            <span class="fa-stack">
+                                <a href="#your-link">
+                                    <i class="fas fa-circle fa-stack-2x twitter"></i>
+                                    <i class="fab fa-twitter fa-stack-1x"></i>
+                                </a>
+                            </span>
+                        </span> <!-- end of social-icons -->
+                    </div> <!-- end of team-membe
+                    
 
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
